--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ name: build
 on:
   push:
   pull_request:
-    branches: [ main ]
+    branches: [ lab2 ]
     paths:
     - '/.cs'
     - '/.csproj'
@@ -28,7 +28,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Install dependencies
-      run: dotnet restore rpbd.sln
+      run: dotnet restore Transport_Shadule.sln
 
     - name: Build
-      run: dotnet build rpbd.sln --configuration Release --no-restore
+      run: dotnet build Transport_Shadule.sln --configuration Release --no-restore
